# AICompiler4RV

./: README.md
benchmark/: MoE.py
doc/: doc.md
mlir-hello/: CMakeLists.txt  README.md  build_and_run.sh  log.md  update-llvm.sh
mlir-hello/include/RISCV/: CMakeLists.txt  RISCVDialect.h  RISCVDialect.td  RISCVOps.h  RISCVOps.td  RISCVPasses.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
mlir-hello/lib/RISCV/: CMakeLists.txt  LowerToAffine.cpp  LowerToLLVM.cpp  RISCVDialect.cpp  RISCVOps.cpp
mlir-hello/riscv-opt/: CMakeLists.txt  riscv-opt.cpp
mlir-hello/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir-hello/test/Hello/: print.ll
mlir-hello/test/RISCV/: hello_world.mlir  print.mlir  sample-opt.mlir  transpose.mlir
